--- a/pages/eskaria1.html
+++ b/pages/eskaria1.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Denda</title>
+    <title>PcMunitibar</title>
+    <link rel="shortcut icon" href="/img/PM-logo-SIN.png">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/eskaria2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,7 +17,7 @@
         <img class="logo" src="/img/PM-logo.jpg" alt="">
         <h2>PcMunitibar</h2>
         </div>
-        <form action="" method="">
+        <form class="buscador" action="" method="">
             <input class="texto" type="text" name="search">
             <input class="busca" type="submit" name="busca" value="▶">
         </form>
@@ -21,15 +25,15 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Hasiera</a></li>
-            <li><a href="/pages/katalogoa.html">Katalogoa</a></li>
-            <li><a href="/pages/eskaria1.html">Eskaintzak</a></li>
-            <li><a href="/pages/kontaktua.html">Kontaktua</a></li>
+            <li><a class="kanit-semibold" href="/index.html">Hasiera</a></li>
+            <li><a class="kanit-semibold" href="/pages/katalogoa.html">Katalogoa</a></li>
+            <li><a class="kanit-semibold" href="/pages/eskaria1.html">Eskaintzak</a></li>
+            <li><a class="kanit-semibold" href="/pages/kontaktua.html">Kontaktua</a></li>
         </ul>
     </nav>
     <main>
         <div class="sub-body">
-            <h1>Eskaria</h1>
+            <h1 class="kanit-semibold">Eskaria</h1>
             <div>
                 <h2>Zure datuak</h2>
                 <table>
