--- a/pages/saskia.html
+++ b/pages/saskia.html
@@ -66,7 +66,7 @@
                         <td></td>
                     </tr>
                   </table>
-                <a class="button" href="/pages/saskia.html">Eskaria egin</a>
+                <a class="button" href="/pages/eskaria1.html">Eskaria egin</a>
             </div>
             
         </div>
