--- a/pages/kontaktua.html
+++ b/pages/kontaktua.html
@@ -37,16 +37,16 @@
             <div>
                 <table>
                     <tr>
-                        <td><img src="/img/kontaktua/insta.png" alt=""></td>
-                        <td><img src="/img/kontaktua/X.png" alt=""></td>
-                        <td><img src="/img/kontaktua/telf.jpg" alt=""></td>
-                        <td><img src="/img/kontaktua/email.png" alt=""></td>
+                        <td>Email</td>
+                        <td><input type="text" id="fname" name="fname"></td>
                     </tr>
                     <tr>
-                        <td>@pcmunitibar</td>
-                        <td>@pcmunitibar</td>
-                        <td>636891076</td>
-                        <td>pcmunitibar@hotmail.com</td>
+                        <td>Afera</td>
+                        <td><input type="text" id="fname" name="fname"></td>
+                    </tr>
+                    <tr>
+                        <td>Gorputza</td>
+                        <td><input type="text" id="fname" name="fname"></td>
                     </tr>
                   </table>
             </div>
