--- a/pages/eskaintzak.html
+++ b/pages/eskaintzak.html
@@ -36,44 +36,46 @@
     </nav>
     <main>
         <div class="sub-body">
-            <h1 class="kanit-semibold">Txartel Grafikoak</h1>
+            <h1 class="kanit-semibold">Eskaintzak</h1>
+            <h2>BLACK FRIDAY</h2>
             <section>
                 <div id="p1">
-                    <a href="/pages/rtx4060ti.html"><img src="/img/gpu/rtx4060ti.png" alt=""></a><br>
-                    <p>NVIDIA RTX 4060 Ti</p>
-                        <p class="prezioa">459,99€</p>
+                    <a href=""><img src="/img/cpu/i7-14700kf.png" alt=""></a><br>
+                    <p>Intel Core i7-14700KF</p>
+                    <div class="eskaintzak"><p class="antes">478,99€</p><p class="prezioa">373,29€</p></div>
+                </div>
+                <div id="p3">
+                    <a href=""><img src="/img/ram/acer-predator-vesta-32gb.png" alt=""></a><br>
+                    <p>Acer Predator 2x16GB</p>
+                    <div class="eskaintzak"><p class="antes">253,99€</p><p class="prezioa">116,99€</p></div>
+                </div>
+                <div id="p3">
+                    <a href=""><img src="/img/cpu/r9-5900x.png" alt=""></a><br>
+                    <p>AMD Ryzen 9 5900X</p>
+                    <div class="eskaintzak"><p class="antes">299,99€</p><p class="prezioa">252,95€</p></div>
+                </div>
+            </section>
+            <h2>Asteko Eskaintzak</h2>
+            <section>
+                <div id="p1">
+                    <a href=""><img src="/img/gpu/rx7900xt.png" alt=""></a><br>
+                    <p>AMD RX 7900 XT</p>
+                    <div class="eskaintzak"><p class="antes">989,99€</p><p class="prezioa">729,99€</p></div>
                 </div>
                 <div id="p2">
                     <a href=""><img src="/img/gpu/rtx4080super.png" alt=""></a><br>
                     <p>NVIDIA RTX 4080 S.</p>
-                    <p class="prezioa">1049,99€</p>
-
+                    <div class="eskaintzak"><p class="antes">1258,99€</p><p class="prezioa">1049,99€</p></div>
                 </div>
                 <div id="p3">
-                    <a href=""><img src="/img/gpu/rx7900gre.png" alt=""></a><br>
-                    <p>AMD RX 7900GRE</p>
-                    <p class="prezioa">579,99€</p>
-                </div>
-                <div id="p4">
-                    <a href=""><img src="/img/gpu/rtx3060.png" alt=""></a><br>
-                    <p>NVIDIA RTX 3060</p>
-                    <p class="prezioa">308,95€</p>
-
-                </div>
-                <div id="p5">
-                    <a href=""><img src="/img/gpu/rx7900xt.png" alt=""></a><br>
-                    <p>AMD RX 7900 XT</p>
-                    <p class="prezioa">729,99€</p>
-                </div>
-                <div id="p6">
-                    <a href=""><img src="/img/gpu/rx6600.png" alt=""></a><br>
-                    <p>AMD RX 6600</p>
-                    <p class="prezioa">219,99€</p>
+                    <a href=""><img src="/img/cpu/r9-5900x.png" alt=""></a><br>
+                    <p>AMD Ryzen 9 5900X</p>
+                    <div class="eskaintzak"><p class="antes">312,99€</p><p class="prezioa">252,95€</p></div>
                 </div>
             </section>
         </div>
     </main>
-
+    
     <footer>
         <p>&copy; 2024 PcMunitibar</p>
     </footer>
