--- a/pages/rtx4060ti.html
+++ b/pages/rtx4060ti.html
@@ -23,7 +23,7 @@
         </div>
         <form class="buscador" action="" method="">
             <input class="texto" type="text" name="search">
-            <input class="busca" type="submit" name="busca" value="▶">
+            <input class="busca" type="submit" name="busca" value="Bilatu">
         </form>
         <a href="/pages/saskia.html"><img class="cesta" src="/img/cesta.jpg" alt=""></a>
     </header>
@@ -31,13 +31,13 @@
         <ul>
             <li><a class="kanit-semibold" href="/index.html">Hasiera</a></li>
             <li><a class="kanit-semibold" href="/pages/katalogoa.html">Katalogoa</a></li>
-            <li><a class="kanit-semibold" href="/pages/eskaria1.html">Eskaintzak</a></li>
+            <li><a class="kanit-semibold" href="/pages/eskaintzak.html">Eskaintzak</a></li>
             <li><a class="kanit-semibold" href="/pages/kontaktua.html">Kontaktua</a></li>
         </ul>
     </nav>
     <main>
         <div class="sub-body">
-            <div>
+            <div class="first">
                 <div class="seccion s1">
                     <div class="img"></div>
                     <div class="miniaturas">
@@ -59,7 +59,7 @@
                             <h4 class="jaso">Jaso bihar</h4>
                         </div>
                         <h4 class="inf">⛫ Eskuragarritasuna dendan</h4>
-                        <h2 class="gehitu">Gehitu saskira</h2>
+                        <a href="/pages/saskia.html"><h2 class="gehitu">Gehitu saskira</h2></a>
                     </div>
                 </div>
             </div>
