--- a/pages/katalogoa.html
+++ b/pages/katalogoa.html
@@ -21,7 +21,7 @@
         </div>
         <form class="buscador" action="" method="">
             <input class="texto" type="text" name="search">
-            <input class="busca" type="submit" name="busca" value="▶">
+            <input class="busca" type="submit" name="busca" value="Bilatu">
         </form>
         <a href="/pages/saskia.html"><img class="cesta" src="/img/cesta.jpg" alt=""></a>
     </header>
@@ -29,11 +29,10 @@
         <ul>
             <li><a class="kanit-semibold" href="/index.html">Hasiera</a></li>
             <li><a class="kanit-semibold" href="/pages/katalogoa.html">Katalogoa</a></li>
-            <li><a class="kanit-semibold" href="/pages/eskaria1.html">Eskaintzak</a></li>
+            <li><a class="kanit-semibold" href="/pages/eskaintzak.html">Eskaintzak</a></li>
             <li><a class="kanit-semibold" href="/pages/kontaktua.html">Kontaktua</a></li>
         </ul>
     </nav>
-    
     <main>
         <div class="sub-body">
             <h1 class="kanit-semibold">Katalogoa</h1>
