--- a/pages/ram.html
+++ b/pages/ram.html
@@ -22,7 +22,7 @@
             </div>
             <form class="buscador" action="" method="">
                 <input class="texto" type="text" name="search">
-                <input class="busca" type="submit" name="busca" value="▶">
+                <input class="busca" type="submit" name="busca" value="Bilatu">
             </form>
             <a href="/pages/saskia.html"><img class="cesta" src="/img/cesta.jpg" alt=""></a>
     </header>
@@ -30,7 +30,7 @@
         <ul>
             <li><a class="kanit-semibold" href="/index.html">Hasiera</a></li>
             <li><a class="kanit-semibold" href="/pages/katalogoa.html">Katalogoa</a></li>
-            <li><a class="kanit-semibold" href="/pages/eskaria1.html">Eskaintzak</a></li>
+            <li><a class="kanit-semibold" href="/pages/eskaintzak.html">Eskaintzak</a></li>
             <li><a class="kanit-semibold" href="/pages/kontaktua.html">Kontaktua</a></li>
         </ul>
     </nav>
