--- a/index.html
+++ b/index.html
@@ -40,12 +40,7 @@
       
         <div class="col-3 col-s-12">
           <div class="aside">
-            <h2>What?</h2>
-            <p>Chania is a city on the island of Crete.</p>
-            <h2>Where?</h2>
-            <p>Crete is a Greek island in the Mediterranean Sea.</p>
-            <h2>How?</h2>
-            <p>You can reach Chania airport from all over Europe.</p>
+            <img style="height: 200px; background-color: black;" src="/img/source.gif" alt="">
           </div>
         </div>
       </div>
