--- a/pages/saskia.html
+++ b/pages/saskia.html
@@ -38,32 +38,34 @@
                 <h2>Produktuak</h2>
                 <table class="saskia">
                     <tr>
-                        <th>Produktuak</th>
-                        <th>Salneurria</th>
-                        <th>Kopurua</th>
-                        <th>Guztira</th>
-                        <th></th>
-                    </tr>
-                    <tr>
+                        <th>Produktuak:</th>
                         <td>NVIDIA RTX 4060 Ti</td>
-                        <td>459,99€</td>
-                        <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
-                        <td>459,99€</td>
-                        <td><button class="button ezabatu">X</button></td>
-                    </tr>
-                    <tr>
                         <td>AMD Ryzen 9 5900X</td>
+                    </tr>
+                    <tr>
+                        <th>Salneurria:</th>
+                        <td>459,99€</td>
                         <td>252,99€</td>
+                    </tr>
+                    <tr>
+                        <th>Kopurua:</th>
                         <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
+                        <td><input type="number" id="quantity" name="quantity" min="1" max="5"></td>
+                    </tr>
+                    <tr>
+                        <th>Guztira:</th>
+                        <td>459,99€</td>
                         <td>252,99€</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button class="button ezabatu">X</button></td>
                         <td><button class="button ezabatu">X</button></td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td></td>
-                        <td>Guztira:</td>
-                        <td>748,98€</td>
-                        <td></td>
+                        <th>Saskia guztira:</th>
+                        <th>748,98€</th>
                     </tr>
                   </table>
                 <a class="button" href="/pages/eskaria1.html">Eskaria egin</a>
