--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PcMunitibar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/produktuak.css">
     <link rel="shortcut icon" href="/img/PM-logo-SIN.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,8 +35,40 @@
         </div>
       
         <div class="col-6 col-s-9">
-          <h1>The City</h1>
-          <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+          <h1 id="nobedadeak">Nobedadeak</h1>
+          <section class="nobedadeak">
+            <div id="p1">
+                <a href="/pages/rtx4060ti.html"><img src="/img/gpu/rtx4060ti.png" alt=""></a><br>
+                <p>NVIDIA RTX 4060 Ti</p>
+                    <p class="prezioa">459,99€</p>
+            </div>
+            <div id="p2">
+                <a href=""><img src="/img/gpu/rtx4080super.png" alt=""></a><br>
+                <p>NVIDIA RTX 4080 S.</p>
+                <p class="prezioa">1049,99€</p>
+            </div>
+            <div id="p3">
+                <a href=""><img src="/img/gpu/rx7900gre.png" alt=""></a><br>
+                <p>AMD RX 7900GRE</p>
+                <p class="prezioa">579,99€</p>
+            </div>
+            <div id="p4">
+              <a href=""><img src="/img/cpu/i5-12400f.png" alt=""></a><br>
+              <p>Intel Core i5-12400F</p>
+              <p class="prezioa">121,50€</p>
+
+          </div>
+          <div id="p5">
+              <a href=""><img src="/img/cpu/i5-14600kf.png" alt=""></a><br>
+              <p>Intel Core i5-14600KF</p>
+              <p class="prezioa">249,99€</p>
+          </div>
+          <div id="p6">
+              <a href=""><img src="/img/cpu/r7-7700x.png" alt=""></a><br>
+              <p>AMD Ryzen 7 7700X</p>
+              <p class="prezioa">343,22€</p>
+          </div>
+          </section>
         </div>
       
         <div class="col-3 col-s-12">
