--- a/pages/kontaktua.html
+++ b/pages/kontaktua.html
@@ -49,8 +49,7 @@
                         Mesua:
                         <textarea name="message"></textarea>
                     </label>
-                    <!-- your other form fields go here -->
-                    <button type="submit">Send</button>
+                    <button type="submit">Bialdu</button>
                     </form>
                 </div>
             </div>
