--- a/pages/eskaintzak.html
+++ b/pages/eskaintzak.html
@@ -63,12 +63,12 @@
                 <section class="eskaintzak-media">
                     <div id="p1">
                         <a href=""><img src="/img/gpu/rx7900xt.png" alt=""></a><br>
-                        <p>AMD RX 7900 XT</p>
+                        <p>AMD RX 7900 XT PLUS</p>
                         <div class="eskaintzak"><p class="antes">989,99€</p><p class="prezioa">729,99€</p></div>
                     </div>
                     <div id="p2">
                         <a href=""><img src="/img/gpu/rtx4080super.png" alt=""></a><br>
-                        <p>NVIDIA RTX 4080 S.</p>
+                        <p>NVIDIA RTX 4080 SUPER</p>
                         <div class="eskaintzak"><p class="antes">1258,99€</p><p class="prezioa">1049,99€</p></div>
                     </div>
                     <div id="p3">
